entrainement du modèle

--- a/python/fashion_mnist.ipynb
+++ b/python/fashion_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7a08efeb",
+   "id": "ed504177",
    "metadata": {},
    "source": [
     "# L'analyse du dataset mnist en tensorflow "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "684d9c4d",
+   "id": "364c6470",
    "metadata": {},
    "source": [
     "## Importataion des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7f6dd399",
+   "id": "19a90f2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bacc472",
+   "id": "46f9c96a",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a0f0ae0e",
+   "id": "71d5a190",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ed357f74",
+   "id": "35881d03",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39afa2e1",
+   "id": "7f6c7102",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8e5d072e",
+   "id": "1bf3b878",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,29 +101,126 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "67ffcb64",
+   "cell_type": "markdown",
+   "id": "d3aa9fc4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'tensorflow._api.v2.train' has no attribute 'meanSquaredError'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-cf108e764dd9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmeanSquaredError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'tensorflow._api.v2.train' has no attribute 'meanSquaredError'"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "## Entrainement du modèle"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04b13502",
+   "id": "dd008a1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "1875/1875 [==============================] - 5s 2ms/step - loss: 3.4956 - accuracy: 0.6887: 0s - loss: 3.6590 - accura\n",
+      "Epoch 2/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.7192 - accuracy: 0.7426\n",
+      "Epoch 3/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.6211 - accuracy: 0.7792\n",
+      "Epoch 4/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.5525 - accuracy: 0.8154\n",
+      "Epoch 5/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.5231 - accuracy: 0.8249\n",
+      "Epoch 6/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.5069 - accuracy: 0.8303\n",
+      "Epoch 7/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4910 - accuracy: 0.8346\n",
+      "Epoch 8/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4886 - accuracy: 0.8361\n",
+      "Epoch 9/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4693 - accuracy: 0.8400\n",
+      "Epoch 10/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4742 - accuracy: 0.8423\n",
+      "Epoch 11/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4742 - accuracy: 0.8419\n",
+      "Epoch 12/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4515 - accuracy: 0.8457: 0s - los\n",
+      "Epoch 13/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4577 - accuracy: 0.8451\n",
+      "Epoch 14/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4556 - accuracy: 0.8457\n",
+      "Epoch 15/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4479 - accuracy: 0.8469\n",
+      "Epoch 16/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4435 - accuracy: 0.8484\n",
+      "Epoch 17/50\n",
+      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.4481 - accuracy: 0.8476\n",
+      "Epoch 18/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4443 - accuracy: 0.8473\n",
+      "Epoch 19/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4384 - accuracy: 0.8501\n",
+      "Epoch 20/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4377 - accuracy: 0.8495\n",
+      "Epoch 21/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4350 - accuracy: 0.8483\n",
+      "Epoch 22/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4334 - accuracy: 0.8498\n",
+      "Epoch 23/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4281 - accuracy: 0.8502\n",
+      "Epoch 24/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4285 - accuracy: 0.8510\n",
+      "Epoch 25/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4230 - accuracy: 0.8514\n",
+      "Epoch 26/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4319 - accuracy: 0.8491\n",
+      "Epoch 27/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4247 - accuracy: 0.8525\n",
+      "Epoch 28/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4257 - accuracy: 0.8515\n",
+      "Epoch 29/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4274 - accuracy: 0.8513\n",
+      "Epoch 30/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4276 - accuracy: 0.8525\n",
+      "Epoch 31/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4320 - accuracy: 0.8496\n",
+      "Epoch 32/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4113 - accuracy: 0.8548\n",
+      "Epoch 33/50\n",
+      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.4211 - accuracy: 0.8530\n",
+      "Epoch 34/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4310 - accuracy: 0.8506\n",
+      "Epoch 35/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4207 - accuracy: 0.8536\n",
+      "Epoch 36/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4235 - accuracy: 0.8529\n",
+      "Epoch 37/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4170 - accuracy: 0.8538\n",
+      "Epoch 38/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4125 - accuracy: 0.8543\n",
+      "Epoch 39/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4172 - accuracy: 0.8554: 0s - loss: 0.4130 - accuracy\n",
+      "Epoch 40/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4137 - accuracy: 0.8553\n",
+      "Epoch 41/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4159 - accuracy: 0.8536\n",
+      "Epoch 42/50\n",
+      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.4220 - accuracy: 0.8523\n",
+      "Epoch 43/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4119 - accuracy: 0.8534: 0s - loss: 0.4123 - accu\n",
+      "Epoch 44/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4175 - accuracy: 0.8544\n",
+      "Epoch 45/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4093 - accuracy: 0.8568\n",
+      "Epoch 46/50\n",
+      " 534/1875 [=======>......................] - ETA: 2s - loss: 0.3991 - accuracy: 0.8566"
+     ]
+    }
+   ],
+   "source": [
+    "modele.fit(X_train, y_train, epochs=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08f7b8f1",
    "metadata": {},
    "outputs": [],
    "source": []
