evaluation du modèle

--- a/python/fashion_mnist.ipynb
+++ b/python/fashion_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ed504177",
+   "id": "012a6be8",
    "metadata": {},
    "source": [
     "# L'analyse du dataset mnist en tensorflow "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "364c6470",
+   "id": "032ea20f",
    "metadata": {},
    "source": [
     "## Importataion des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "19a90f2d",
+   "id": "aab779b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46f9c96a",
+   "id": "49457358",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "71d5a190",
+   "id": "b6969731",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "35881d03",
+   "id": "84f6f24b",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f6c7102",
+   "id": "c63f13e3",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1bf3b878",
+   "id": "2c206727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3aa9fc4",
+   "id": "75fe7d41",
    "metadata": {},
    "source": [
     "## Entrainement du modèle"
@@ -110,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd008a1c",
+   "execution_count": 14,
+   "id": "c9359968",
    "metadata": {},
    "outputs": [
     {
@@ -209,8 +209,26 @@
       "Epoch 45/50\n",
       "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4093 - accuracy: 0.8568\n",
       "Epoch 46/50\n",
-      " 534/1875 [=======>......................] - ETA: 2s - loss: 0.3991 - accuracy: 0.8566"
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4081 - accuracy: 0.8547\n",
+      "Epoch 47/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4174 - accuracy: 0.8544\n",
+      "Epoch 48/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4146 - accuracy: 0.8534\n",
+      "Epoch 49/50\n",
+      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.4110 - accuracy: 0.8561\n",
+      "Epoch 50/50\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4152 - accuracy: 0.8571\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x23569fe4c10>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -218,12 +236,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abe2ec76",
+   "metadata": {},
+   "source": [
+    "## Evaluation du modèle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08f7b8f1",
+   "id": "f36890ba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "modele."
+   ]
   }
  ],
  "metadata": {
