prediction du modèle

--- a/python/fashion_mnist.ipynb
+++ b/python/fashion_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "012a6be8",
+   "id": "74a68609",
    "metadata": {},
    "source": [
     "# L'analyse du dataset mnist en tensorflow "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "032ea20f",
+   "id": "f03ede29",
    "metadata": {},
    "source": [
     "## Importataion des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aab779b5",
+   "id": "b42868fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49457358",
+   "id": "e28b2946",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b6969731",
+   "id": "a5b9aab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "84f6f24b",
+   "id": "a17fae0f",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c63f13e3",
+   "id": "715a8d4b",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2c206727",
+   "id": "bf25cfca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75fe7d41",
+   "id": "270e1369",
    "metadata": {},
    "source": [
     "## Entrainement du modèle"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c9359968",
+   "id": "a87d85e6",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abe2ec76",
+   "id": "35f1b825",
    "metadata": {},
    "source": [
     "## Evaluation du modèle"
@@ -245,12 +245,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "a09f8808",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 [==============================] - 1s 2ms/step - loss: 0.5785 - accuracy: 0.8250\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.5785151720046997, 0.824999988079071]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modele.evaluate(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cd62b6c",
+   "metadata": {},
+   "source": [
+    "## Prédiction du modèle"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f36890ba",
+   "id": "f03258b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "modele."
+    "y_pred = modele.predict()"
    ]
   }
  ],
