--- a/python/fashion_mnist.ipynb
+++ b/python/fashion_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "994c532f",
+   "id": "1c132405",
    "metadata": {},
    "source": [
     "# L'analyse du dataset mnist en tensorflow "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e379b7",
+   "id": "fd3ed35a",
    "metadata": {},
    "source": [
     "## Importataion des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "78113fe4",
+   "id": "d126252c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4baab52",
+   "id": "9d98af98",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5e590dfc",
+   "id": "e9dbedc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6e29d583",
+   "id": "01871f58",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2a74315",
+   "id": "7ec292f5",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "17b63fa2",
+   "id": "d963e877",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53001145",
+   "id": "5a3c834e",
    "metadata": {},
    "source": [
     "## Entrainement du modèle"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c3a19c62",
+   "id": "e99da435",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e4ad92a",
+   "id": "c8858d03",
    "metadata": {},
    "source": [
     "## Evaluation du modèle"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "823ca283",
+   "id": "7ddb091f",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d66aef81",
+   "id": "9825dc13",
    "metadata": {},
    "source": [
     "## Prédiction du modèle"
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d1bbc573",
+   "id": "23c23d24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b75deeaf",
+   "id": "5d0dae22",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "50e6a5f9",
+   "id": "e2c29a88",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48128793",
+   "id": "bebf263c",
    "metadata": {},
    "source": [
     "## Determinons la matrice de confusion"
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a03ebc45",
+   "id": "97a33115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0e0bb499",
+   "id": "9e1b2c42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "840c0f98",
+   "id": "4ecd598c",
    "metadata": {},
    "outputs": [
     {
@@ -394,9 +394,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e748a8ca",
+   "metadata": {},
+   "source": [
+    "## Mise à l'echelle des données"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb5a25db",
+   "id": "ce94af11",
    "metadata": {},
    "outputs": [],
    "source": []
