Ré-évaluons notre modèle

--- a/python/fashion_mnist.ipynb
+++ b/python/fashion_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2fde67e6",
+   "id": "5e14e505",
    "metadata": {},
    "source": [
     "# L'analyse du dataset mnist en tensorflow "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1345daa1",
+   "id": "f9866e26",
    "metadata": {},
    "source": [
     "## Importataion des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ac886388",
+   "id": "2b840e0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eae41f33",
+   "id": "f2042b68",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "61f3a859",
+   "id": "f62f734e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "00cf173c",
+   "id": "bdba6929",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a4e0432",
+   "id": "843514e9",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6ab301bd",
+   "id": "3a245abf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d8b7eb8",
+   "id": "cbd9a514",
    "metadata": {},
    "source": [
     "## Entrainement du modèle"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "92b3d6cb",
+   "id": "daa01854",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d18b29",
+   "id": "4ea8918b",
    "metadata": {},
    "source": [
     "## Evaluation du modèle"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1b308828",
+   "id": "46f76ef3",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "332c3b2c",
+   "id": "514dcb5b",
    "metadata": {},
    "source": [
     "## Prédiction du modèle"
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5da9fdfb",
+   "id": "f5c3615e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1f3cca31",
+   "id": "0e892651",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c22f1d7d",
+   "id": "1ca01177",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "775e3dc3",
+   "id": "5d21b40b",
    "metadata": {},
    "source": [
     "## Determinons la matrice de confusion"
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "26c9e7f5",
+   "id": "6905d2f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3638c1e0",
+   "id": "a34fe2a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "39ef50b5",
+   "id": "1f5c6bb7",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0516be9",
+   "id": "3aa6619c",
    "metadata": {},
    "source": [
     "## Mise à l'echelle des données"
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "77eaa3b4",
+   "id": "4d72e5ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c731c1c0",
+   "id": "38bb5289",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67df6685",
+   "id": "16b61d3d",
    "metadata": {},
    "source": [
     "## Ré-entrainement du modèle"
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4bd5d674",
+   "id": "ff6d50e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "20e76bbb",
+   "execution_count": 29,
+   "id": "0ab93cc1",
    "metadata": {},
    "outputs": [
     {
@@ -683,8 +683,34 @@
       "Epoch 21/30\n",
       "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1741 - accuracy: 0.9355\n",
       "Epoch 22/30\n",
-      "1603/1875 [========================>.....] - ETA: 0s - loss: 0.1680 - accuracy: 0.9361"
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1694 - accuracy: 0.9362\n",
+      "Epoch 23/30\n",
+      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.1650 - accuracy: 0.9374\n",
+      "Epoch 24/30\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.1597 - accuracy: 0.9398\n",
+      "Epoch 25/30\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1585 - accuracy: 0.9396\n",
+      "Epoch 26/30\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1544 - accuracy: 0.9421\n",
+      "Epoch 27/30\n",
+      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.1497 - accuracy: 0.9444\n",
+      "Epoch 28/30\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1470 - accuracy: 0.9454\n",
+      "Epoch 29/30\n",
+      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.1443 - accuracy: 0.9460\n",
+      "Epoch 30/30\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.1412 - accuracy: 0.9471\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x2356ac96520>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -694,10 +720,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c899f511",
+   "id": "dfddca6d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Ré-évaluons notre m"
+   ]
   }
  ],
  "metadata": {
