Prédiction du nouveau modèle

--- a/python/fashion_mnist.ipynb
+++ b/python/fashion_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e14e505",
+   "id": "da40a5db",
    "metadata": {},
    "source": [
     "# L'analyse du dataset mnist en tensorflow "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9866e26",
+   "id": "43b4a877",
    "metadata": {},
    "source": [
     "## Importataion des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2b840e0b",
+   "id": "d29007ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2042b68",
+   "id": "8d3c5dad",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f62f734e",
+   "id": "9e78d7f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bdba6929",
+   "id": "6b9832ab",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "843514e9",
+   "id": "55f10080",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3a245abf",
+   "id": "ca71e237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbd9a514",
+   "id": "53a1589a",
    "metadata": {},
    "source": [
     "## Entrainement du modèle"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "daa01854",
+   "id": "779fc6a2",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ea8918b",
+   "id": "4642ef4c",
    "metadata": {},
    "source": [
     "## Evaluation du modèle"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "46f76ef3",
+   "id": "50ee97ed",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "514dcb5b",
+   "id": "877b33a1",
    "metadata": {},
    "source": [
     "## Prédiction du modèle"
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f5c3615e",
+   "id": "68effe3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0e892651",
+   "id": "788cd0dd",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1ca01177",
+   "id": "46a3f1ef",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d21b40b",
+   "id": "cbb5434e",
    "metadata": {},
    "source": [
     "## Determinons la matrice de confusion"
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6905d2f8",
+   "id": "c1945bf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a34fe2a8",
+   "id": "29c0dc2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1f5c6bb7",
+   "id": "67f80e46",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aa6619c",
+   "id": "ac4000ea",
    "metadata": {},
    "source": [
     "## Mise à l'echelle des données"
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4d72e5ac",
+   "id": "6259b41a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "38bb5289",
+   "id": "da9860f6",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16b61d3d",
+   "id": "473d24ad",
    "metadata": {},
    "source": [
     "## Ré-entrainement du modèle"
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ff6d50e7",
+   "id": "d2855876",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0ab93cc1",
+   "id": "224cda5a",
    "metadata": {},
    "outputs": [
     {
@@ -718,13 +718,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "05d08bbd",
+   "metadata": {},
+   "source": [
+    "## Ré-évaluons notre modèle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c7a9dc23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 [==============================] - 1s 1ms/step - loss: 0.3936 - accuracy: 0.8860\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.3936077356338501, 0.8859999775886536]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modele_scale.evaluate(X_test_scale, y_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfddca6d",
+   "id": "ee021b21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Ré-évaluons notre m"
+    "## Prédiction du nouveau"
    ]
   }
  ],
