Création du dataset

--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "487710c4",
+   "id": "07e69a95",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce4307ea",
+   "id": "1496dfaf",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -18,14 +18,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "af3691b2",
+   "execution_count": 1,
+   "id": "7c2e9ae1",
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import "
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "from sklearn.datasets import make_blobs\n",
+    "plt.style.use('ggplot')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e95e794c",
+   "metadata": {},
+   "source": [
+    "## Création du dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "28e8fa23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Les de X: (100, 2)\n",
+      "Les de y: (100, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, y = make_blobs(n_samples=100, n_features=2, centers=2, random_state=0)\n",
+    "y = y.reshape(y.shape[0], 1)\n",
+    "\n",
+    "print(f'Les de X: {X.shape}')\n",
+    "print(f'Les de y: {y.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb1dd836",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
