Création de la fonction initialisation

--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0fff3475",
+   "id": "8582f12c",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5a1ba4f",
+   "id": "207d2830",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4f338894",
+   "id": "85e476f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ecad1e8",
+   "id": "247cd810",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3a950699",
+   "id": "d6582a79",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cd073e5",
+   "id": "1c18480b",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "909b6e2a",
+   "id": "723c4bd1",
    "metadata": {},
    "outputs": [
     {
@@ -103,9 +103,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b45ea83e",
+   "metadata": {},
+   "source": [
+    "## Création de la fonction initialisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "63317877",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialisation(X):\n",
+    "    W = np.random.randn(X.shape[1], 1)\n",
+    "    b = np.random.randn(1)\n",
+    "    \n",
+    "    return (W, b)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8007b55b",
+   "id": "15c1983d",
    "metadata": {},
    "outputs": [],
    "source": []
