--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8582f12c",
+   "id": "49a75621",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "207d2830",
+   "id": "0bdbb927",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "85e476f5",
+   "id": "bc59ad8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247cd810",
+   "id": "3900091e",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d6582a79",
+   "id": "d96cf399",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c18480b",
+   "id": "17792d45",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "723c4bd1",
+   "id": "43672fa6",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b45ea83e",
+   "id": "89e8e088",
    "metadata": {},
    "source": [
     "## Création de la fonction initialisation"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "63317877",
+   "id": "7ffab21b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,12 +125,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48cdd939",
+   "metadata": {},
+   "source": [
+    "## Testons la fonction d'initialisation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15c1983d",
+   "execution_count": 5,
+   "id": "3bbafd24",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "W, b = initialisation(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "da7a9c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.6442544 ],\n",
+       "       [-0.37450607]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ea5a8dcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.11659903])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3b5f218",
+   "metadata": {},
+   "source": [
+    "## Création du modèle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e28edfef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modele(X, W, b):\n",
+    "    Z = X.dot(W) + b\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
