Création du modèle

--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "49a75621",
+   "id": "7b95ebdb",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bdbb927",
+   "id": "1c2022ad",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bc59ad8d",
+   "id": "fb4ff787",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3900091e",
+   "id": "b312b8d4",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d96cf399",
+   "id": "a1e389d5",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17792d45",
+   "id": "bd8a31eb",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "43672fa6",
+   "id": "708026bc",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89e8e088",
+   "id": "6f994c41",
    "metadata": {},
    "source": [
     "## Création de la fonction initialisation"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7ffab21b",
+   "id": "f744464b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48cdd939",
+   "id": "0351eb6c",
    "metadata": {},
    "source": [
     "## Testons la fonction d'initialisation"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3bbafd24",
+   "id": "533dc5b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "da7a9c6e",
+   "id": "e375485b",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ea5a8dcd",
+   "id": "58a3abb1",
    "metadata": {},
    "outputs": [
     {
@@ -187,22 +187,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3b5f218",
+   "id": "6bae88ef",
    "metadata": {},
    "source": [
-    "## Création du modèle"
+    "## Création de la fonction d'action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ad2c631e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(Z):\n",
+    "    A = 1 / (1 + np.exp(-Z))\n",
+    "    return A"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e28edfef",
+   "id": "78c4e259",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def modele(X, W, b):\n",
-    "    Z = X.dot(W) + b\n",
-    "    "
+    "#"
    ]
   }
  ],
